correct delay on dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,17 @@
 }
 
 }
+
+.video-container {
+    --border-width: 40px;
+    margin: var(--border-width) auto;
+    position: sticky;
+    top: var(--border-width);
+    width: 800px;
+    backdrop-filter: blur(4px) brightness(150%);
+  }
+/*   
+  video {
+    width: 400px;
+    position: relative;
+  } */
